src/components/Wall/styles.scss
.wall {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    min-height: 100vh;
    width: 100vw;
    position: relative;
    margin: 0;
    box-sizing: border-box;
    overflow: hidden;
    user-select: none;
    background-color: var(--dark1);
    background-image: url('../../assets/noise.gif');

    &__graphic {
        font-family: var(--clash-semibold);
        text-transform: uppercase;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        height: 100vh;
        mix-blend-mode: exclusion;

        &--logo {
            max-width: 500px;
            pointer-events: none;
        }

        &--guy {
            width: 72px;
            margin-top: 2rem;
        }
    }
}

// INstructions block
.instructions {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    gap: .5rem;
    padding: 2rem;
    text-align: center;
    text-transform: uppercase;
    position: fixed;
    bottom: 0;
    box-sizing: border-box;

    &--hand {
        font-size: 30px;
        margin-top: -6px;
    }
}

// curved text
path {
    fill: transparent;
  }
  
text {
    fill: var(--white);
    font-size: 40px;
  }

// Smaller devices

@media (max-width: 1024px) {
    .wall {
        &__graphic {
            max-width: 290px;

            &--curvedtext {
                transform: scale(0.75);
            }
        }

    } 

    .instructions {
        font-size: var(--xs-font);
    }
}

@media (max-width: 577px) {
    .instructions {
        padding: 1rem;
    }
}

